# icalendar-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG2.md  Cargo.toml  LICENSE  README.md  cliff.toml  example.rs  faulty.ics
.github/workflows/: ci.yml
examples/: alarm.rs  alarm_full_circle.rs  alarm_minimal.rs  birthday.rs  custom_property.rs  custom_property_parsed.rs  default.rs  event.rs  example_utils.rs  full_circle.rs  ical_to_json.rs  json_to_ical.rs  parse.rs  parse_advanced.rs  parsed_property.rs  readme-parse.rs  readme.rs  reserialize.rs  tasks.rs  timezone.rs  todos.rs  write.rs
fixtures/: empty.ics
fixtures/icalendar-rb/: README.md
fixtures/icalendar-rb-bad-utf8/: README.md
src/: assert.rs  calendar.rs  components.rs  lib.rs  lib.rs.bk  parse.rs  period.rs  period.rs.bk  properties.rs  repeats.rs  value_types.rs
src/calendar/: calendar_component.rs
src/components/: alarm.rs  date_time.rs  duration.rs  event.rs  other.rs  todo.rs  venue.rs
src/parse/: calendar.rs  components.rs  lines.rs  mod.rs  owned.rs  parameters.rs  properties.rs  tests.rs  utils.rs
src/parser/: calendar.rs  components.rs  mod.rs  owned.rs  parameters.rs  parsed_string.rs  properties.rs  tests.rs  utils.rs
test/: example_write.ics
tests/: alarm.rs  calendar.rs  folding_consistency.rs  full_circle.rs  lorem.txt  parse_fixtures.rs  reserialize.rs  try_into_string.rs
