[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
name = "icalendar"
version = "0.14.2"
license = "MIT/Apache-2.0"
edition = "2021"

description = "Strongly typed iCalendar builder and parser."
keywords = ["calendar", "ical", "ics", "icalendar", "parser"]

documentation = "https://docs.rs/icalendar/"
repository = "https://github.com/hoodie/icalendar-rs"
readme = "README.md"

rust-version = "1.56"
exclude = ["fixtures", ".github", ".gitignore", "*.json"]

[features]
default = ["parser"]
parser = ["nom"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
iso8601 = "0.5"

[dependencies.chrono]
version = "0.4"
default_features = false
features = ["clock", "std", "wasmbind"]

[dependencies.nom]
version = "7"
optional = true

[dependencies.uuid]
features = ["v4"]
version = "1"

[dev-dependencies]
pretty_assertions = "1"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["parser"]

[[example]]
name = "parse_advanced"
path = "examples/parse_advanced.rs"
required-features = ["parser"]

[[example]]
name = "ical_to_json"
path = "examples/ical_to_json.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "json_to_ical"
path = "examples/json_to_ical.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "full_circle"
path = "examples/full_circle.rs"
required-features = ["parser"]

[[example]]
name = "parsed_property"
path = "examples/custom_property_parsed.rs"
required-features = ["parser"]
