[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
name = "icalendar"
version = "0.16.1"
license = "MIT/Apache-2.0"
edition = "2021"

description = "Strongly typed iCalendar builder and parser."
keywords = ["calendar", "ical", "ics", "icalendar", "parser", "RFC5545", "RFC7986"]
categories = ["date-and-time", "data-structures", "parsing", ]

documentation = "https://docs.rs/icalendar/"
repository = "https://github.com/hoodie/icalendar-rs"
readme = "README.md"

rust-version = "1.60"
exclude = ["fixtures", ".github", ".gitignore", "*.json"]

[features]
default = ["parser"]
parser = ["dep:nom"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
iso8601 = "0.6"
chrono-tz = {version = "0.9", optional = true }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std", "wasmbind"]

[dependencies.nom]
version = "7"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
features = ["v4"]
version = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
features = ["v4", "js"]
version = "1.8"

[dev-dependencies]
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["parser"]

[[example]]
name = "parse_advanced"
path = "examples/parse_advanced.rs"
required-features = ["parser"]

[[example]]
name = "ical_to_json"
path = "examples/ical_to_json.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "json_to_ical"
path = "examples/json_to_ical.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "full_circle"
path = "examples/full_circle.rs"
required-features = ["parser"]

[[example]]
name = "parsed_property"
path = "examples/custom_property_parsed.rs"
required-features = ["parser"]

[[example]]
name = "timezone"
path = "examples/timezone.rs"
required-features = ["chrono-tz"]
